--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -57,26 +57,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def unzip_data(filename):\n",
-    "  \"\"\"\n",
-    "  Unzips filename into the current working directory.\n",
-    "\n",
-    "  Args:\n",
-    "    filename (str): a filepath to a target zip folder to be unzipped.\n",
-    "  \"\"\"\n",
-    "  zip_ref = zipfile.ZipFile(filename, \"r\")\n",
-    "  zip_ref.extractall()\n",
-    "  zip_ref.close()\n",
-    "  \n",
-    "# unzip_data(\"CV_Data.zip\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "name = 'task_2.ipynb'\n",
     "\n",
     "path = ''\n",
@@ -100,6 +80,26 @@
     "train_dir = 'Group_20/train'\n",
     "test_dir = 'Group_20/test'\n",
     "val_dir = 'Group_20/val'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def unzip_data(filename):\n",
+    "  \"\"\"\n",
+    "  Unzips filename into the current working directory.\n",
+    "\n",
+    "  Args:\n",
+    "    filename (str): a filepath to a target zip folder to be unzipped.\n",
+    "  \"\"\"\n",
+    "  zip_ref = zipfile.ZipFile(filename, \"r\")\n",
+    "  zip_ref.extractall()\n",
+    "  zip_ref.close()\n",
+    "  \n",
+    "unzip_data(f\"{path}CV_Data.zip\")"
    ]
   },
   {
@@ -648,7 +648,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07 18:06:16.370363: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-08 13:19:45.264385: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -718,7 +718,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14792 bytes to task_2.py\n"
+      "[NbConvertApp] Writing 14797 bytes to task_2.py\n"
      ]
     }
    ],
