--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -265,6 +265,7 @@
    ],
    "source": [
     "maximum_sequence_length = 50\n",
+    "mask_value = 0.0 ## because dataset do not have zero value\n",
     "fig,ax = plt.subplots(1,2, figsize=(10, 5))\n",
     "ax = ax.reshape(-1)\n",
     "for i in range(2):\n",
@@ -462,7 +463,7 @@
    ],
    "source": [
     "def paddingSequence(data_X, maxlen=maximum_sequence_length):\n",
-    "    data_X = keras.preprocessing.sequence.pad_sequences(data_X, maxlen=maximum_sequence_length, padding='post', value=0, dtype='float32')\n",
+    "    data_X = keras.preprocessing.sequence.pad_sequences(data_X, maxlen=maximum_sequence_length, padding='post', value=mask_value, dtype='float32')\n",
     "    return data_X\n",
     "\n",
     "train_M_X = paddingSequence(train_X)\n",
@@ -602,7 +603,7 @@
     "input_shape = (train_M_X.shape[1], train_M_X.shape[2])\n",
     "model_1 = Sequential()\n",
     "model_1.add(layers.Input(shape=input_shape))\n",
-    "model_1.add(layers.Masking(mask_value=0.0))\n",
+    "model_1.add(layers.Masking(mask_value=mask_value))\n",
     "model_1.add(layers.LSTM(64, return_sequences=True))\n",
     "model_1.add(layers.LSTM(32, return_sequences=True))\n",
     "model_1.add(layers.LSTM(16))\n",
@@ -648,7 +649,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-08 13:19:45.264385: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-08 13:47:50.351514: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -718,7 +719,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14797 bytes to task_2.py\n"
+      "[NbConvertApp] Writing 14872 bytes to task_2.py\n"
      ]
     }
    ],
