--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -74,8 +74,6 @@
     "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
     "checkpoint_path = pathfinal+'weights/checkpoint'\n",
     "train_dir = 'Group_20/train'\n",
     "test_dir = 'Group_20/test'\n",
@@ -629,7 +627,7 @@
     "#                 callbacks=[HistorySaver((initial_train_loss, initial_train_acc, initial_valid_loss, initial_valid_acc)), \n",
     "#                                 checkpoint_callback,\n",
     "#                                 early_stopping_cb],\n",
-    "#                 batch_size=32, epochs=100, verbose=1)"
+    "#                 batch_size=batch_size_val, epochs=epoch_val, verbose=1)"
    ]
   },
   {
@@ -649,7 +647,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-08 13:47:50.351514: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:13:00.598603: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -719,7 +717,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14872 bytes to task_2.py\n"
+      "[NbConvertApp] Writing 14855 bytes to task_2.py\n"
      ]
     }
    ],
