--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -72,10 +72,7 @@
     "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint'"
    ]
   },
   {
@@ -189,7 +186,7 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'Handwriting_Data'\n",
+    "l0 = path + 'Handwriting_Data'\n",
     "for l1 in os.listdir(l0):\n",
     "    if(l1 in tw):\n",
     "        f1 = os.path.join(l0, l1)\n",
@@ -587,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-14 16:11:12.009296: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:20:58.085171: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     }
    ],
@@ -874,7 +871,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 17072 bytes to task_1.py\n"
+      "[NbConvertApp] Writing 16998 bytes to task_1.py\n"
      ]
     }
    ],
