--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -74,10 +74,7 @@
     "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint'"
    ]
   },
   {
@@ -175,7 +172,7 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'CV_Data'\n",
+    "l0 = path+'CV_Data'\n",
     "totalFiles=0\n",
     "train_files = 0\n",
     "test_files = 0\n",
@@ -647,7 +644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-14 16:13:00.598603: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:22:07.003298: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -717,7 +714,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14855 bytes to task_2.py\n"
+      "[NbConvertApp] Writing 14779 bytes to task_2.py\n"
      ]
     }
    ],
