--- a/experiments_different_architecture/1_temp1.ipynb
+++ b/experiments_different_architecture/1_temp1.ipynb
@@ -77,10 +77,10 @@
    "source": [
     "name = 'task_1.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/' + '../'\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -88,16 +88,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_a/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint1'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint1'"
    ]
   },
   {
@@ -191,14 +184,18 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'Handwriting_Data'\n",
+    "l0 = path + 'Handwriting_Data'\n",
     "for l1 in os.listdir(l0):\n",
     "    if(l1 in tw):\n",
     "        f1 = os.path.join(l0, l1)\n",
     "        for l2 in os.listdir(f1):\n",
+    "            if(l2=='.DS_Store'):\n",
+    "                    continue\n",
     "            f2 = os.path.join(f1, l2)\n",
     "            flag = False\n",
     "            for l3 in os.listdir(f2):\n",
+    "                if(l3=='.DS_Store'):\n",
+    "                    continue\n",
     "                if(flag==False):\n",
     "                    print(f'{l1} length: {len(os.listdir(f2))}, {l2}')\n",
     "                flag=True\n",
@@ -576,7 +573,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07 18:12:35.620405: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:23:48.214050: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     }
    ],
@@ -758,57 +755,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "11/11 [==============================] - 16s 326ms/step - loss: 1.6099 - accuracy: 0.1590 - val_loss: 1.6028 - val_accuracy: 0.2800\n",
-      "Epoch 2/100\n",
-      "11/11 [==============================] - 4s 358ms/step - loss: 1.5401 - accuracy: 0.4884 - val_loss: 1.4165 - val_accuracy: 0.3700\n",
-      "Epoch 3/100\n",
-      "11/11 [==============================] - 4s 339ms/step - loss: 1.2327 - accuracy: 0.4855 - val_loss: 1.1329 - val_accuracy: 0.5500\n",
-      "Epoch 4/100\n",
-      "11/11 [==============================] - 4s 390ms/step - loss: 0.9869 - accuracy: 0.5983 - val_loss: 1.0860 - val_accuracy: 0.5600\n",
-      "Epoch 5/100\n",
-      "11/11 [==============================] - 4s 322ms/step - loss: 0.7678 - accuracy: 0.7110 - val_loss: 1.0555 - val_accuracy: 0.5600\n",
-      "Epoch 6/100\n",
-      "11/11 [==============================] - 3s 313ms/step - loss: 0.5565 - accuracy: 0.7977 - val_loss: 1.1773 - val_accuracy: 0.5600\n",
-      "Epoch 7/100\n",
-      "11/11 [==============================] - 4s 341ms/step - loss: 0.4317 - accuracy: 0.8728 - val_loss: 1.2046 - val_accuracy: 0.5000\n",
-      "Epoch 8/100\n",
-      "11/11 [==============================] - 4s 329ms/step - loss: 0.2951 - accuracy: 0.9335 - val_loss: 1.2857 - val_accuracy: 0.4900\n",
-      "Epoch 9/100\n",
-      "11/11 [==============================] - 3s 319ms/step - loss: 0.2489 - accuracy: 0.9249 - val_loss: 1.4184 - val_accuracy: 0.5400\n",
-      "Epoch 10/100\n",
-      "11/11 [==============================] - 4s 352ms/step - loss: 0.2088 - accuracy: 0.9509 - val_loss: 1.3164 - val_accuracy: 0.6000\n",
-      "Epoch 11/100\n",
-      "11/11 [==============================] - 4s 321ms/step - loss: 0.1695 - accuracy: 0.9480 - val_loss: 1.3829 - val_accuracy: 0.5400\n",
-      "Epoch 12/100\n",
-      "11/11 [==============================] - 4s 348ms/step - loss: 0.1103 - accuracy: 0.9884 - val_loss: 1.4149 - val_accuracy: 0.5600\n",
-      "Epoch 13/100\n",
-      "11/11 [==============================] - 4s 324ms/step - loss: 0.0819 - accuracy: 0.9913 - val_loss: 1.5005 - val_accuracy: 0.5200\n",
-      "Epoch 14/100\n",
-      "11/11 [==============================] - 4s 342ms/step - loss: 0.0600 - accuracy: 0.9913 - val_loss: 1.5682 - val_accuracy: 0.5200\n",
-      "Epoch 15/100\n",
-      "11/11 [==============================] - 4s 341ms/step - loss: 0.0501 - accuracy: 0.9913 - val_loss: 1.6195 - val_accuracy: 0.5400\n",
-      "Epoch 16/100\n",
-      "11/11 [==============================] - 4s 338ms/step - loss: 0.0417 - accuracy: 0.9942 - val_loss: 1.5107 - val_accuracy: 0.5900\n",
-      "Epoch 17/100\n",
-      "11/11 [==============================] - 4s 340ms/step - loss: 0.0364 - accuracy: 0.9942 - val_loss: 1.5206 - val_accuracy: 0.5800\n",
-      "Epoch 18/100\n",
-      "11/11 [==============================] - 4s 357ms/step - loss: 0.0329 - accuracy: 0.9942 - val_loss: 1.5479 - val_accuracy: 0.5600\n",
-      "Epoch 19/100\n",
-      "11/11 [==============================] - 4s 343ms/step - loss: 0.0285 - accuracy: 0.9942 - val_loss: 1.4745 - val_accuracy: 0.5900\n",
-      "Epoch 20/100\n",
-      "11/11 [==============================] - 4s 349ms/step - loss: 0.0263 - accuracy: 0.9971 - val_loss: 1.5183 - val_accuracy: 0.5700\n",
-      "Epoch 21/100\n",
-      "11/11 [==============================] - 4s 344ms/step - loss: 0.0298 - accuracy: 0.9942 - val_loss: 1.6007 - val_accuracy: 0.5600\n",
-      "Epoch 21: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X_Upscale,train_M_Y, verbose=0)\n",
@@ -824,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -863,7 +810,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -883,27 +830,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_21.csv')\n",
     "# df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X_Upscale, test_M_Y, tw)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 16782 bytes to task_1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   }
  ],
