--- a/experiments_different_architecture/1_temp3.ipynb
+++ b/experiments_different_architecture/1_temp3.ipynb
@@ -77,10 +77,10 @@
    "source": [
     "name = 'task_1.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/' + '../'\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -88,16 +88,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_a/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint3'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint3'"
    ]
   },
   {
@@ -191,14 +184,18 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'Handwriting_Data'\n",
+    "l0 = path + 'Handwriting_Data'\n",
     "for l1 in os.listdir(l0):\n",
     "    if(l1 in tw):\n",
     "        f1 = os.path.join(l0, l1)\n",
     "        for l2 in os.listdir(f1):\n",
+    "            if(l2=='.DS_Store'):\n",
+    "                    continue\n",
     "            f2 = os.path.join(f1, l2)\n",
     "            flag = False\n",
     "            for l3 in os.listdir(f2):\n",
+    "                if(l3=='.DS_Store'):\n",
+    "                    continue\n",
     "                if(flag==False):\n",
     "                    print(f'{l1} length: {len(os.listdir(f2))}, {l2}')\n",
     "                flag=True\n",
@@ -576,7 +573,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07 18:26:45.074869: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:29:16.861795: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     }
    ],
@@ -766,35 +763,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "11/11 [==============================] - 24s 400ms/step - loss: 1.6101 - accuracy: 0.1734 - val_loss: 1.6035 - val_accuracy: 0.2300\n",
-      "Epoch 2/100\n",
-      "11/11 [==============================] - 4s 406ms/step - loss: 1.5367 - accuracy: 0.4075 - val_loss: 1.4825 - val_accuracy: 0.2800\n",
-      "Epoch 3/100\n",
-      "11/11 [==============================] - 4s 393ms/step - loss: 1.2128 - accuracy: 0.5549 - val_loss: 1.4247 - val_accuracy: 0.3800\n",
-      "Epoch 4/100\n",
-      "11/11 [==============================] - 4s 383ms/step - loss: 0.9727 - accuracy: 0.6792 - val_loss: 1.3856 - val_accuracy: 0.4000\n",
-      "Epoch 5/100\n",
-      "11/11 [==============================] - 4s 389ms/step - loss: 0.8405 - accuracy: 0.7543 - val_loss: 1.4189 - val_accuracy: 0.3900\n",
-      "Epoch 6/100\n",
-      "11/11 [==============================] - 4s 400ms/step - loss: 0.6848 - accuracy: 0.8006 - val_loss: 1.4840 - val_accuracy: 0.3100\n",
-      "Epoch 7/100\n",
-      "11/11 [==============================] - 4s 392ms/step - loss: 0.5733 - accuracy: 0.8497 - val_loss: 1.5247 - val_accuracy: 0.3800\n",
-      "Epoch 8/100\n",
-      "11/11 [==============================] - 4s 413ms/step - loss: 0.4189 - accuracy: 0.9133 - val_loss: 1.5910 - val_accuracy: 0.4200\n",
-      "Epoch 9/100\n",
-      "11/11 [==============================] - 4s 393ms/step - loss: 0.3381 - accuracy: 0.9393 - val_loss: 1.8390 - val_accuracy: 0.3700\n",
-      "Epoch 10/100\n",
-      "11/11 [==============================] - 5s 421ms/step - loss: 0.3604 - accuracy: 0.9104 - val_loss: 1.7687 - val_accuracy: 0.4500\n",
-      "Epoch 10: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X_Upscale,train_M_Y, verbose=0)\n",
@@ -810,7 +779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +818,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -869,35 +838,8 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_10.csv')\n",
     "# df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X_Upscale, test_M_Y, tw)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 16782 bytes to task_1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
