--- a/experiments_different_architecture/2_temp1.ipynb
+++ b/experiments_different_architecture/2_temp1.ipynb
@@ -79,10 +79,10 @@
    "source": [
     "name = 'task_2.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/'+'../'\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -90,16 +90,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_b/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint1'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint1'"
    ]
   },
   {
@@ -177,7 +170,7 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'CV_Data'\n",
+    "l0 = path+'CV_Data'\n",
     "totalFiles=0\n",
     "train_files = 0\n",
     "test_files = 0\n",
@@ -623,54 +616,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07 21:46:30.498551: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "62/62 [==============================] - 10s 44ms/step - loss: 1.0910 - accuracy: 0.6634 - val_loss: 0.8741 - val_accuracy: 0.7393\n",
-      "Epoch 2/100\n",
-      "62/62 [==============================] - 3s 44ms/step - loss: 0.7451 - accuracy: 0.7578 - val_loss: 0.7151 - val_accuracy: 0.7658\n",
-      "Epoch 3/100\n",
-      "62/62 [==============================] - 3s 43ms/step - loss: 0.6026 - accuracy: 0.8083 - val_loss: 0.6022 - val_accuracy: 0.8086\n",
-      "Epoch 4/100\n",
-      "62/62 [==============================] - 3s 43ms/step - loss: 0.4954 - accuracy: 0.8542 - val_loss: 0.5622 - val_accuracy: 0.8248\n",
-      "Epoch 5/100\n",
-      "62/62 [==============================] - 3s 43ms/step - loss: 0.4483 - accuracy: 0.8664 - val_loss: 0.5721 - val_accuracy: 0.8167\n",
-      "Epoch 6/100\n",
-      "62/62 [==============================] - 3s 45ms/step - loss: 0.3948 - accuracy: 0.8893 - val_loss: 0.4932 - val_accuracy: 0.8595\n",
-      "Epoch 7/100\n",
-      "62/62 [==============================] - 3s 45ms/step - loss: 0.3401 - accuracy: 0.9062 - val_loss: 0.4515 - val_accuracy: 0.8697\n",
-      "Epoch 8/100\n",
-      "62/62 [==============================] - 3s 44ms/step - loss: 0.3104 - accuracy: 0.9159 - val_loss: 0.5410 - val_accuracy: 0.8411\n",
-      "Epoch 9/100\n",
-      "62/62 [==============================] - 3s 44ms/step - loss: 0.2972 - accuracy: 0.9179 - val_loss: 0.4676 - val_accuracy: 0.8534\n",
-      "Epoch 10/100\n",
-      "62/62 [==============================] - 3s 43ms/step - loss: 0.2771 - accuracy: 0.9174 - val_loss: 0.4722 - val_accuracy: 0.8534\n",
-      "Epoch 11/100\n",
-      "62/62 [==============================] - 3s 44ms/step - loss: 0.2480 - accuracy: 0.9317 - val_loss: 0.4374 - val_accuracy: 0.8656\n",
-      "Epoch 12/100\n",
-      "62/62 [==============================] - 3s 45ms/step - loss: 0.2128 - accuracy: 0.9465 - val_loss: 0.4676 - val_accuracy: 0.8676\n",
-      "Epoch 13/100\n",
-      "62/62 [==============================] - 3s 46ms/step - loss: 0.1924 - accuracy: 0.9444 - val_loss: 0.5269 - val_accuracy: 0.8534\n",
-      "Epoch 14/100\n",
-      "62/62 [==============================] - 3s 45ms/step - loss: 0.1812 - accuracy: 0.9531 - val_loss: 0.4758 - val_accuracy: 0.8656\n",
-      "Epoch 15/100\n",
-      "62/62 [==============================] - 3s 44ms/step - loss: 0.1578 - accuracy: 0.9592 - val_loss: 0.5075 - val_accuracy: 0.8534\n",
-      "Epoch 16/100\n",
-      "62/62 [==============================] - 3s 45ms/step - loss: 0.1641 - accuracy: 0.9577 - val_loss: 0.5174 - val_accuracy: 0.8371\n",
-      "Epoch 16: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X, train_M_Y, verbose=0)\n",
@@ -686,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +640,20 @@
      "output_type": "stream",
      "text": [
       "Training Accuracy for model: 95.77%\n",
-      "Validation Accuracy for model: 83.71%\n",
+      "Validation Accuracy for model: 83.71%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-14 16:30:38.415222: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test Accuracy for model: 86.97%\n"
      ]
     },
@@ -725,7 +684,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -745,27 +704,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_16.csv')\n",
     "# # df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X, test_M_Y, class_names)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14792 bytes to task_2.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   }
  ],
