--- a/experiments_different_architecture/2_temp2.ipynb
+++ b/experiments_different_architecture/2_temp2.ipynb
@@ -79,10 +79,10 @@
    "source": [
     "name = 'task_2.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/' + '../'\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -90,16 +90,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_b/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint2'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint2'"
    ]
   },
   {
@@ -177,7 +170,7 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'CV_Data'\n",
+    "l0 = path + 'CV_Data'\n",
     "totalFiles=0\n",
     "train_files = 0\n",
     "test_files = 0\n",
@@ -626,52 +619,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07 21:49:17.626013: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "62/62 [==============================] - 12s 65ms/step - loss: 0.9554 - accuracy: 0.6859 - val_loss: 0.7670 - val_accuracy: 0.7413\n",
-      "Epoch 2/100\n",
-      "62/62 [==============================] - 4s 68ms/step - loss: 0.6596 - accuracy: 0.7919 - val_loss: 0.6442 - val_accuracy: 0.7841\n",
-      "Epoch 3/100\n",
-      "62/62 [==============================] - 4s 68ms/step - loss: 0.5487 - accuracy: 0.8210 - val_loss: 0.5477 - val_accuracy: 0.8248\n",
-      "Epoch 4/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.4746 - accuracy: 0.8429 - val_loss: 0.5138 - val_accuracy: 0.8310\n",
-      "Epoch 5/100\n",
-      "62/62 [==============================] - 4s 70ms/step - loss: 0.4013 - accuracy: 0.8781 - val_loss: 0.4898 - val_accuracy: 0.8330\n",
-      "Epoch 6/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.3409 - accuracy: 0.8944 - val_loss: 0.4842 - val_accuracy: 0.8371\n",
-      "Epoch 7/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.3303 - accuracy: 0.8980 - val_loss: 0.5239 - val_accuracy: 0.8391\n",
-      "Epoch 8/100\n",
-      "62/62 [==============================] - 4s 68ms/step - loss: 0.2895 - accuracy: 0.9108 - val_loss: 0.6444 - val_accuracy: 0.7943\n",
-      "Epoch 9/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.2873 - accuracy: 0.9113 - val_loss: 0.4824 - val_accuracy: 0.8554\n",
-      "Epoch 10/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.2503 - accuracy: 0.9230 - val_loss: 0.5520 - val_accuracy: 0.8371\n",
-      "Epoch 11/100\n",
-      "62/62 [==============================] - 4s 68ms/step - loss: 0.2336 - accuracy: 0.9301 - val_loss: 0.4910 - val_accuracy: 0.8248\n",
-      "Epoch 12/100\n",
-      "62/62 [==============================] - 4s 72ms/step - loss: 0.2089 - accuracy: 0.9408 - val_loss: 0.4682 - val_accuracy: 0.8534\n",
-      "Epoch 13/100\n",
-      "62/62 [==============================] - 4s 71ms/step - loss: 0.1809 - accuracy: 0.9516 - val_loss: 0.6103 - val_accuracy: 0.8330\n",
-      "Epoch 14/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.1612 - accuracy: 0.9567 - val_loss: 0.5570 - val_accuracy: 0.8473\n",
-      "Epoch 15/100\n",
-      "62/62 [==============================] - 4s 69ms/step - loss: 0.1860 - accuracy: 0.9465 - val_loss: 0.5420 - val_accuracy: 0.8371\n",
-      "Epoch 15: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X, train_M_Y, verbose=0)\n",
@@ -687,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +643,20 @@
      "output_type": "stream",
      "text": [
       "Training Accuracy for model: 94.65%\n",
-      "Validation Accuracy for model: 83.71%\n",
+      "Validation Accuracy for model: 83.71%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-14 16:31:46.071706: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test Accuracy for model: 85.54%\n"
      ]
     },
@@ -726,7 +687,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -746,18 +707,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_15.csv')\n",
     "# # df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X, test_M_Y, class_names)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   }
  ],
