--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -584,7 +584,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-14 16:20:58.085171: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:34:18.526089: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     }
    ],
@@ -858,7 +858,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_1_12.csv')\n",
     "# df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X_Upscale, test_M_Y, tw)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   },
   {
@@ -871,7 +871,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 16998 bytes to task_1.py\n"
+      "[NbConvertApp] Writing 17004 bytes to task_1.py\n"
      ]
     }
    ],
