--- a/experiments_different_architecture/1_temp2.ipynb
+++ b/experiments_different_architecture/1_temp2.ipynb
@@ -77,10 +77,10 @@
    "source": [
     "name = 'task_1.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/' + '../\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -88,16 +88,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_a/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint2'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint2'"
    ]
   },
   {
@@ -191,14 +184,18 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'Handwriting_Data'\n",
+    "l0 = path + 'Handwriting_Data'\n",
     "for l1 in os.listdir(l0):\n",
     "    if(l1 in tw):\n",
     "        f1 = os.path.join(l0, l1)\n",
     "        for l2 in os.listdir(f1):\n",
+    "            if(l2=='.DS_Store'):\n",
+    "                    continue\n",
     "            f2 = os.path.join(f1, l2)\n",
     "            flag = False\n",
     "            for l3 in os.listdir(f2):\n",
+    "                if(l3=='.DS_Store'):\n",
+    "                    continue\n",
     "                if(flag==False):\n",
     "                    print(f'{l1} length: {len(os.listdir(f2))}, {l2}')\n",
     "                flag=True\n",
@@ -576,7 +573,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-07 18:17:25.931834: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:28:01.921371: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     }
    ],
@@ -762,39 +759,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "11/11 [==============================] - 20s 353ms/step - loss: 1.6098 - accuracy: 0.1763 - val_loss: 1.6032 - val_accuracy: 0.2400\n",
-      "Epoch 2/100\n",
-      "11/11 [==============================] - 4s 337ms/step - loss: 1.5582 - accuracy: 0.4480 - val_loss: 1.4883 - val_accuracy: 0.4600\n",
-      "Epoch 3/100\n",
-      "11/11 [==============================] - 4s 338ms/step - loss: 1.2939 - accuracy: 0.5549 - val_loss: 1.2033 - val_accuracy: 0.5000\n",
-      "Epoch 4/100\n",
-      "11/11 [==============================] - 4s 339ms/step - loss: 0.9535 - accuracy: 0.7225 - val_loss: 1.1868 - val_accuracy: 0.5000\n",
-      "Epoch 5/100\n",
-      "11/11 [==============================] - 4s 352ms/step - loss: 0.7052 - accuracy: 0.8439 - val_loss: 1.1688 - val_accuracy: 0.5400\n",
-      "Epoch 6/100\n",
-      "11/11 [==============================] - 4s 330ms/step - loss: 0.5744 - accuracy: 0.8613 - val_loss: 1.2544 - val_accuracy: 0.5400\n",
-      "Epoch 7/100\n",
-      "11/11 [==============================] - 4s 334ms/step - loss: 0.4716 - accuracy: 0.9075 - val_loss: 1.2409 - val_accuracy: 0.5200\n",
-      "Epoch 8/100\n",
-      "11/11 [==============================] - 4s 340ms/step - loss: 0.3897 - accuracy: 0.9393 - val_loss: 1.2377 - val_accuracy: 0.5500\n",
-      "Epoch 9/100\n",
-      "11/11 [==============================] - 4s 335ms/step - loss: 0.3782 - accuracy: 0.9249 - val_loss: 1.3223 - val_accuracy: 0.5300\n",
-      "Epoch 10/100\n",
-      "11/11 [==============================] - 4s 349ms/step - loss: 0.3326 - accuracy: 0.9306 - val_loss: 1.5042 - val_accuracy: 0.5100\n",
-      "Epoch 11/100\n",
-      "11/11 [==============================] - 4s 349ms/step - loss: 0.2770 - accuracy: 0.9509 - val_loss: 1.4784 - val_accuracy: 0.5300\n",
-      "Epoch 12/100\n",
-      "11/11 [==============================] - 4s 353ms/step - loss: 0.3043 - accuracy: 0.9306 - val_loss: 1.4824 - val_accuracy: 0.5400\n",
-      "Epoch 12: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X_Upscale,train_M_Y, verbose=0)\n",
@@ -810,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -849,7 +814,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -869,35 +834,8 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_12.csv')\n",
     "# df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X_Upscale, test_M_Y, tw)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 16782 bytes to task_1.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
