--- a/experiments_different_architecture/2_temp3.ipynb
+++ b/experiments_different_architecture/2_temp3.ipynb
@@ -79,10 +79,10 @@
    "source": [
     "name = 'task_2.ipynb'\n",
     "\n",
-    "path = ''\n",
+    "path = '' + '../'\n",
     "# from google.colab import drive\n",
     "# drive.mount('/content/drive')\n",
-    "# path = '/content/drive/MyDrive/deepLearningAs3/'\n",
+    "# path = '/content/drive/MyDrive/deepLearningAs3/' + '../\n",
     "\n",
     "random_state_global = 42\n",
     "\n",
@@ -90,16 +90,9 @@
     "pathfinal2 = path + 'model_images/'\n",
     "weightPath = path + 'model_history/part_b/weights/'\n",
     "\n",
-    "epoch_val = 3000\n",
-    "batch_size_val = 32\n",
     "threshold_val = 1e-4\n",
     "\n",
-    "IMG_SIZE = (224, 224)\n",
-    "CHANNELS = 3\n",
-    "checkpoint_path = pathfinal+'weights/checkpoint3'\n",
-    "train_dir = 'Group_20/train'\n",
-    "test_dir = 'Group_20/test'\n",
-    "val_dir = 'Group_20/val'"
+    "checkpoint_path = pathfinal+'weights/checkpoint3'\n"
    ]
   },
   {
@@ -177,7 +170,7 @@
     "test_Y = []\n",
     "len_Y = [] # later sequence changed\n",
     "\n",
-    "l0 = 'CV_Data'\n",
+    "l0 = path + 'CV_Data'\n",
     "totalFiles=0\n",
     "train_files = 0\n",
     "test_files = 0\n",
@@ -629,42 +622,7 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07 21:51:55.531916: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100\n",
-      "62/62 [==============================] - 14s 75ms/step - loss: 1.1031 - accuracy: 0.6563 - val_loss: 0.8481 - val_accuracy: 0.7291\n",
-      "Epoch 2/100\n",
-      "62/62 [==============================] - 5s 77ms/step - loss: 0.6984 - accuracy: 0.7914 - val_loss: 0.6206 - val_accuracy: 0.8024\n",
-      "Epoch 3/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.5423 - accuracy: 0.8327 - val_loss: 0.5052 - val_accuracy: 0.8411\n",
-      "Epoch 4/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.4624 - accuracy: 0.8562 - val_loss: 0.4936 - val_accuracy: 0.8493\n",
-      "Epoch 5/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.4182 - accuracy: 0.8674 - val_loss: 0.4781 - val_accuracy: 0.8493\n",
-      "Epoch 6/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.3895 - accuracy: 0.8842 - val_loss: 0.5173 - val_accuracy: 0.8024\n",
-      "Epoch 7/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.3588 - accuracy: 0.8904 - val_loss: 0.4593 - val_accuracy: 0.8513\n",
-      "Epoch 8/100\n",
-      "62/62 [==============================] - 5s 80ms/step - loss: 0.3136 - accuracy: 0.9067 - val_loss: 0.5221 - val_accuracy: 0.8350\n",
-      "Epoch 9/100\n",
-      "62/62 [==============================] - 5s 79ms/step - loss: 0.2710 - accuracy: 0.9215 - val_loss: 0.5137 - val_accuracy: 0.8473\n",
-      "Epoch 10/100\n",
-      "62/62 [==============================] - 5s 78ms/step - loss: 0.2758 - accuracy: 0.9153 - val_loss: 0.5057 - val_accuracy: 0.8411\n",
-      "Epoch 10: early stopping\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# # Evaluate the model_1 initial losses\n",
     "# initial_train_loss, initial_train_acc = model_1.evaluate(train_M_X, train_M_Y, verbose=0)\n",
@@ -688,7 +646,20 @@
      "output_type": "stream",
      "text": [
       "Training Accuracy for model: 91.53%\n",
-      "Validation Accuracy for model: 84.11%\n",
+      "Validation Accuracy for model: 84.11%\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-05-14 16:32:43.519482: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Test Accuracy for model: 85.13%\n"
      ]
     },
@@ -739,27 +710,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_10.csv')\n",
     "# # df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X, test_M_Y, class_names)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14792 bytes to task_2.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "delete_folder_contents(pathfinal2)\n",
-    "get_ipython().system('osascript -e \\'tell application \"System Events\" to keystroke \"s\" using command down\\'')\n",
-    "get_ipython().system(f'jupyter nbconvert {name} --to python')"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   }
  ],
