--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -644,7 +644,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-14 16:22:07.003298: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-14 16:34:02.285044: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
@@ -701,7 +701,7 @@
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_3_19.csv')\n",
     "# # df_history_1 = pd.DataFrame(history_1.history)\n",
     "showResults(model_1, df_history_1, test_M_X, test_M_Y, class_names)\n",
-    "plot_model(model_1,to_file=f'model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
+    "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   },
   {
@@ -714,7 +714,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_2.ipynb to python\n",
-      "[NbConvertApp] Writing 14779 bytes to task_2.py\n"
+      "[NbConvertApp] Writing 14785 bytes to task_2.py\n"
      ]
     }
    ],
