--- a/task_1.ipynb
+++ b/task_1.ipynb
@@ -362,10 +362,10 @@
     "             size=text_size)\n",
     "    \n",
     "\n",
-    "def inferences(df_model_history, model, data_X, data_Y):\n",
-    "    print(f'Training Accuracy for model: {df_model_history[\"accuracy\"].to_list()[-1]*100:.2f}%')\n",
-    "    print(f'Validation Accuracy for model: {df_model_history[\"val_accuracy\"].to_list()[-1]*100:.2f}%')\n",
-    "    print(f'Test Accuracy for model: {model.evaluate(data_X, data_Y, verbose=0)[1]*100:.2f}%')\n",
+    "def inferences(df_model_history, model, train_M_X, train_M_Y, test_M_X, test_M_Y):\n",
+    "    print(f'Training Accuracy for model: {model.evaluate(train_M_X, train_M_Y, verbose=0)[1]*100:.2f}%')\n",
+    "    # print(f'Validation Accuracy for model: {df_model_history[\"val_accuracy\"].to_list()[-1]*100:.2f}%')\n",
+    "    print(f'Test Accuracy for model: {model.evaluate(test_M_X, test_M_Y, verbose=0)[1]*100:.2f}%')\n",
     "\n",
     "    df_model_history.plot(title=\"Accuracy / Loss vs Epoch\", xlabel='Epoch', ylabel='Accuracy / Loss')\n",
     "    plt.show()\n",
@@ -388,9 +388,9 @@
     "    plt.axis(False)\n",
     "    plt.show()\n",
     "\n",
-    "def showResults(model, history, data_X, data_Y, classNames):\n",
-    "    inferences(history, model, data_X, data_Y)\n",
-    "    makingPredictionWithCM(model, data_X, data_Y, classNames)\n",
+    "def showResults(model, history, train_M_X, train_M_Y, test_M_X, test_M_Y, classNames):\n",
+    "    inferences(history, model, train_M_X, train_M_Y, test_M_X, test_M_Y)\n",
+    "    makingPredictionWithCM(model, test_M_X, test_M_Y, classNames)\n",
     "    # plottingModel(model)"
    ]
   },
@@ -809,24 +809,17 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Accuracy for model: 93.35%\n",
-      "Validation Accuracy for model: 97.00%\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-05-18 22:20:09.564609: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2023-05-18 22:30:08.148204: W tensorflow/core/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Training Accuracy for model: 95.66%\n",
       "Test Accuracy for model: 100.00%\n"
      ]
     },
@@ -876,7 +869,7 @@
     "model_1.load_weights(checkpoint_path)\n",
     "df_history_1 = pd.read_csv(f'{pathfinal}sequential_1_89.csv')\n",
     "# df_history_1 = pd.DataFrame(history_1.history)\n",
-    "showResults(model_1, df_history_1, test_M_X, test_M_Y, tw)\n",
+    "showResults(model_1, df_history_1, train_M_X, train_M_Y, test_M_X, test_M_Y, tw)\n",
     "plot_model(model_1,to_file=f'{path}model_images/model.png', show_shapes=True, show_layer_activations=True, expand_nested=True, dpi=999)"
    ]
   },
@@ -890,7 +883,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook task_1.ipynb to python\n",
-      "[NbConvertApp] Writing 17391 bytes to task_1.py\n"
+      "[NbConvertApp] Writing 17509 bytes to task_1.py\n"
      ]
     }
    ],
